k8s/ingress/retail-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: retail-ingress
  namespace: retail

  annotations:

    # Internet-facing ALB
    alb.ingress.kubernetes.io/scheme: internet-facing

    # Send traffic directly to Pod IPs
    alb.ingress.kubernetes.io/target-type: ip

    # ALB HTTP listener
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    # UI health check
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health

    alb.ingress.kubernetes.io/healthcheck-port: traffic-port

    alb.ingress.kubernetes.io/success-codes: "200"

spec:

  ingressClassName: alb

  rules:

    - host: retail.metatechz.store

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:
                name: ui
                port:
                  number: 80
